Tue Mar 01 11:39:40 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Mon Feb 28 12:40:24 GMT 2011  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Avoid leaking postlist tree if an exception
	  is thrown during the match.

Wed Feb 23 15:26:56 GMT 2011  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/index.html: Process collapsing.rst and link
	  it into the documentation.

Wed Feb 23 15:22:06 GMT 2011  Olly Betts <olly@survex.com>

	* docs/collapsing.rst: Add missing document (for some reason this file
	  was empty in SVN, but present in my tree under a different name, and
	  not checked in).

Mon Feb 21 14:49:06 GMT 2011  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Deprecate MSet.items and ESet.items.

Mon Feb 21 14:06:21 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc,backends/chert/chert_database.cc,
	  backends/flint/flint_database.cc,common/remoteconnection.h,
	  net/remoteconnection.cc: Pass a file descriptor to
	  RemoteConnection::send_file() to avoid a race between the caller
	  checking if a file exists and send_file() trying to open it to send
	  it.

Mon Feb 21 13:50:06 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Fix issues detected by DACA cppcheck run on the
	  Debian archive.

Mon Feb 21 13:30:55 GMT 2011  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Fix spaceterms1 which was never running one part
	  of the testcase (and had been that way for years).  Fix an
	  off-by-one error in the enabled code.

Mon Feb 21 13:05:36 GMT 2011  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Add some test coverage for
	  DatabaseModifiedError in get_mset().

Mon Feb 21 12:03:35 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Fix typo in old entry.

Mon Feb 21 11:36:07 GMT 2011  Olly Betts <olly@survex.com>

	* examples/quest.cc: Report any spelling correction (requires the
	  database contains spelling data of course).
