@@ -691,7 +691,7 @@ answer the IR system can give you.
 <H2>Further Reading</H2>
 
 <P>If you want to find out more, then
-<a href="http://citeseer.ist.psu.edu/robertson97simple.html"><i>"Simple,
+<a href="http://citeseer.ist.psu.edu/viewdoc/summary?doi=10.1.1.53.8337"><i>"Simple,
 proven approaches to text retrieval"</i></a> is a worthwhile read.  It's a
 good introduction to Probabilistic Information retrieval,
 which is basically what Xapian provides.
@@ -719,14 +719,13 @@ Addison Wesley, written by Ricardo Baeza-Yates and Berthier Ribeiro-Neto)
 gives a good overview of the field.  It was published more recently than
 the books above, and so covers some more recent developments.
 
-<li> &quot;<em>Introduction to Information Retrieval</em>&quot; (<b>to
-be published in 2008</b> by Cambridge University Press, written by
+<li> &quot;<em>Introduction to Information Retrieval</em>&quot;
+(published by Cambridge University Press, written by
 Christopher D. Manning, Prabhakar Raghavan and Hinrich Schi&uuml;tze)
 looks to be a good introductory work (we've not read it in detail yet).
-It's not yet published, but the latest draft can be read online at
+As well as the print version, there's an online version on
 <a href="http://www-csli.stanford.edu/~hinrich/information-retrieval-book.html">the
-book's companion website</a> which says the online version will remain
-after publication.
+book's companion website</a>.
 
 </UL>
 
