@@ -1,3 +1,8 @@
+Thu Mar 03 11:06:30 GMT 2011  Olly Betts <olly@survex.com>
+
+	* docs/intro_ir.html: Update link to a paper.  Update text about book
+	  "to be published in 2008".
+
 Tue Mar 01 11:39:40 GMT 2011  Olly Betts <olly@survex.com>
 
 	* NEWS: Update from ChangeLog.
